--- a/unpack/Cargo.toml
+++ b/unpack/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.1"
 edition = "2021"
 authors = ["Elad Kaplan <kaplan.elad@gmail.com>"]
 license = "Apache-2.0"
-description = "Packing deep archives files from a root folder"
+description = "Unpack deep archive files recursively over a file tree or a folder"
 homepage = "https://github.com/spectralOps/deep-unpack"
 repository = "https://github.com/spectralOps/deep-unpack"
 documentation = "https://docs.rs/deep-unpac/latest/deep-unpac"
